Template for main activity

--- a/PIAndroidAgent/res/values/strings.xml
+++ b/PIAndroidAgent/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">PI Android Agent</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_list">Activities</string>
+    <string name="title_activity_detail">Activity Detail</string>
 
 </resources>
