New UI with NavigationDrawer, yayyyyy

--- a/PIAndroidAgent/res/values/strings.xml
+++ b/PIAndroidAgent/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_list">Activities</string>
     <string name="title_activity_detail">Activity Detail</string>
-
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 </resources>
